# SynthLoop

./: README.md  pyproject.toml
configs/: synthloop.yaml
src/synthloop/: config.py
src/synthloop/data/: dataset.py
src/synthloop/model/: loader.py  loras.py
src/synthloop/rag/: retriever.py  store.py
src/synthloop/training/: trainer.py  trainer_unsloth.py
